menambahkan animasi pada teks dan menghubungkan link sosial media

--- a/index.html
+++ b/index.html
@@ -36,14 +36,18 @@
     <div class="home-content">
       <h3>Hello, I am</h3>
       <h1>Ricky Harefa</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque laudantium perferendis et corrupti ab consectetur sequi dolores exercitationem iste repudiandae!</p>
+      <div class="text-wrapper">
+        <div class="moving-text">I am a junior front-end web developer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+        <div class="moving-text">I am a junior front-end web developer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+      </div>
+      <p>Berusaha menjadi front-end developer profesional, terus belajar dan mencari tahu inovasi web terbaru</p>
       <div class="social-media">
         <a href="#"><i class=' bx bxl-facebook' ></i></a>
-        <a href="#"><i class='bx bxl-whatsapp' ></i></a>
-        <a href="#"><i class='bx bxl-instagram' ></i></a>
+        <a href="https://wa.me/6282294985034?text=Halo%2C%20saya%20ingin%20bertanya%20tentang%20jasa%20Anda%21%20Apakah%20Anda%20bersedia%3F" target="_blank"><i class='bx bxl-whatsapp' ></i></a>
+        <a href="https://www.instagram.com/rickyom_" target="_blank"><i class='bx bxl-instagram' ></i></a>
         <a href="#"><i class='bx bxl-linkedin' ></i></a>
       </div>
-      <a href="#" class="btn">Download</a>
+      <a href="#" class="btn">Download CV</a>
     </div>
 
     <div class="profession-container">
@@ -81,9 +85,8 @@
     </div>
     <div class="about-content">
       <h2 class="heading">About <span>Me</span></h2>
-      <h3>Hi, I'm Here To Help Your Next Project</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis repellendus aliquam optio similique facere officia veritatis eum cum modi, quo aspernatur cumque minus vero at iste numquam natus adipisci eius dignissimos beatae vel soluta! Recusandae reprehenderit mollitia delectus minima dignissimos!</p>
-      <a href="#" class="btn">Read More</a>
+      <h3>Saya seorang junior front-end web developer dengan minat yang besar dalam menciptakan pengalaman pengguna yang interaktif dan menyenangkan. Saya menguasai HTML, CSS, bootstrap, JavaScript, reactJs, php, dan laravel serta selalu bersemangat untuk belajar hal baru tentang dunian website</p>
+      <a href="about.html" class="btn">Read More</a>
     </div>
   </section>
   <!-- about section end -->
@@ -291,8 +294,8 @@
     </div>
 
     <div class="social-media">
-      <a href="#"><i class='bx bxl-youtube'></i></a>
-      <a href="#"><i class='bx bxl-github' ></i></a>
+      <a href="https://www.youtube.com/@rickyharefa1154" target="_blank"><i class='bx bxl-youtube'></i></a>
+      <a href="https://github.com/ricky-hrf" target="_blank"><i class='bx bxl-github' ></i></a>
     </div>
 
     <div class="footer-iconTop">
