melengkapi fungsi fitur link

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <div class="moving-text">I am a junior front-end web developer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
         <div class="moving-text">I am a junior front-end web developer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
       </div>
-      <p>Berusaha menjadi front-end developer profesional, terus belajar dan mencari tahu inovasi web terbaru</p>
+      <p>Saya berusaha menjadi front-end  web developer profesional, terus belajar dan mencari tahu inovasi web terbaru</p>
       <div class="social-media">
         <a href="#"><i class=' bx bxl-facebook' ></i></a>
         <a href="https://wa.me/6282294985034?text=Halo%2C%20saya%20ingin%20bertanya%20tentang%20jasa%20Anda%21%20Apakah%20Anda%20bersedia%3F" target="_blank"><i class='bx bxl-whatsapp' ></i></a>
         <a href="https://www.instagram.com/rickyom_" target="_blank"><i class='bx bxl-instagram' ></i></a>
         <a href="#"><i class='bx bxl-linkedin' ></i></a>
       </div>
-      <a href="#" class="btn">Download CV</a>
+      <a href="https://drive.google.com/file/d/12qug1tFhxFP94fNo2G2gVyyt5G6DWvK8/preview?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn">Download CV</a>
     </div>
 
     <div class="profession-container">
@@ -85,12 +85,72 @@
     </div>
     <div class="about-content">
       <h2 class="heading">About <span>Me</span></h2>
-      <h3>Saya seorang junior front-end web developer dengan minat yang besar dalam menciptakan pengalaman pengguna yang interaktif dan menyenangkan. Saya menguasai HTML, CSS, bootstrap, JavaScript, reactJs, php, dan laravel serta selalu bersemangat untuk belajar hal baru tentang dunian website</p>
+      <h3>Saya seorang junior front-end web developer dengan minat yang besar dalam menciptakan pengalaman pengguna yang interaktif dan menyenangkan. Saya menguasai HTML, CSS, bootstrap, JavaScript, reactJs, php, dan laravel serta selalu bersemangat untuk belajar hal baru tentang dunia website</p>
       <a href="about.html" class="btn">Read More</a>
     </div>
   </section>
   <!-- about section end -->
 
+  <!-- skills start -->
+
+  <div class="skills" id="skills">
+    <h2 class="heading">My <span>Skills</span></h2>
+
+    <div class="skills-container">
+      <a href="https://www.w3schools.com/html/" target="_blank">
+      <div class="skills-box">
+        <img src="images/html-icon.png" alt="">
+        <h3>HTML</h3>
+        <p>Kemampuan dalam menulis kode HTML yang bersih dan terstruktur</p>
+      </div>
+    </a>
+    <a href="https://www.w3schools.com/css/" target="_blank">
+      <div class="skills-box">
+        <img src="images/css-icon.png" alt="">
+        <h3>CSS</h3>
+        <p>Kemampuan yang baik dalam mendesain tampilan yang menarik dan responsif menggunakan CSS.</p>
+      </div>
+    </a>
+    <a href="https://www.javascript.com/" target="_blank">
+      <div class="skills-box">
+        <img src="images/js-icon.png" alt="">
+        <h3>JavaScript</h3>
+        <p>Kemampuan membuat interaktivitas pada halaman web menggunakan JavaScript murni.</p>
+      </div>
+    </a>
+    <a href="https://getbootstrap.com/docs/5.0/getting-started/introduction/" target="_blank">
+      <div class="skills-box">
+        <img src="images/bootstrap.png" alt="">
+        <h3>Bootstrap</h3>
+        <p>Memilik kemampuan menggunakan <em>Bootstrap</em> untuk mempercepat pengembangan proyek web.</p>
+      </div>
+    </a>
+    <a href="https://react.dev/learn" target="_blank">
+      <div class="skills-box">
+        <img src="images/react.png" alt="">
+        <h3>ReactJS</h3>
+        <p>Memiliki kemampuan dalam membuat aplikasi responsif dengan React</p>
+      </div>
+    </a>
+    <a href="https://www.php.net/" target="_blank">
+      <div class="skills-box">
+        <img src="images/php.png" alt="">
+        <h3>php</h3>
+        <p>Memiliki kemampuan dalam membuat halaman web dinamis menggunakan PHP untuk menampilkan data dari database.</p>
+      </div>
+    </a>
+    <a href="https://laravel.com/" target="_blank">
+      <div class="skills-box">
+        <img src="images/laravel.png" alt="">
+        <h3>Laravel</h3>
+        <p>Memiliki kemampuan menggunakan Laravel untuk membangun aplikasi web yang kompleks dan terstruktur.</p>
+      </div>
+    </a>
+    </div>
+  </div>
+
+  <!-- skills sction end -->
+  
   <!-- service section start -->
 
   <section class="services" id="services">
@@ -100,20 +160,17 @@
       <div class="services-box">
         <i class='bx bx-code-alt'></i>
         <h3>We Development</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga tenetur ut accusamus nihil, ullam quibusdam quia hic, voluptatum voluptatem eos, nostrum praesentium.</p>
-        <a href="#" class="btn">Read More</a>
+        <p>Siap memiliki website yang menarik dan fungsional? Kami hadir untuk membantu Anda menciptakan website profesional yang tidak hanya tampil hebat, tetapi juga meningkatkan bisnis Anda! Ayo, bangun website impian Anda bersama kami!</p>
       </div>
       <div class="services-box">
         <i class='bx bxs-paint'></i>
         <h3>Graphic Design</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga tenetur ut accusamus nihil, ullam quibusdam quia hic, voluptatum voluptatem eos, nostrum praesentium.</p>
-        <a href="#" class="btn">Read More</a>
+        <p>Ingin brand Anda tampil beda dan menarik perhatian? Percayakan kepada kami untuk menciptakan desain grafis yang kreatif dan memukau, yang akan membawa identitas brand Anda ke tingkat berikutnya. Mari wujudkan ide-ide kreatif Anda!</p>
       </div>
       <div class="services-box">
         <i class='bx bx-bar-chart'></i>
         <h3>Digital Marketing</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga tenetur ut accusamus nihil, ullam quibusdam quia hic, voluptatum voluptatem eos, nostrum praesentium.</p>
-        <a href="#" class="btn">Read More</a>
+        <p>Raih lebih banyak pelanggan dan tingkatkan penjualan dengan strategi digital marketing kami! Kami siap mengoptimalkan kehadiran online Anda dan menjangkau audiens lebih luas. Hubungi kami sekarang untuk mulai mendominasi dunia digital!</p>
       </div>
     </div>
   </section>
