memperbaiki tampilan responsiv

--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@ publicKey: "71_9-CTH02Ajq551s",
     <div class="about-content">
       <h2 class="heading">About <span>Me</span></h2>
       <h3>Saya seorang junior front-end web developer dengan minat yang besar dalam menciptakan pengalaman pengguna yang interaktif dan menyenangkan. Saya menguasai HTML, CSS, bootstrap, JavaScript, reactJs, php, dan laravel serta selalu bersemangat untuk belajar hal baru tentang dunia website</p>
-      <a href="about.html" class="btn">Read More</a>
     </div>
   </section>
   <!-- about section end -->
@@ -197,9 +196,9 @@ publicKey: "71_9-CTH02Ajq551s",
       <div class="portfolio-box">
         <img src="images/project1.png" alt="">
         <div class="portfolio-layer">
-          <h4>Web Design</h4>
+          <h4>Quiz App</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt iste molestiae ipsum!</p>
-          <a href="#"><i class='bx bx-link-external' ></i></a>
+          <a href="/project01/index.html"><i class='bx bx-link-external' ></i></a>
         </div>
       </div>
       <div class="portfolio-box">
@@ -283,34 +282,34 @@ publicKey: "71_9-CTH02Ajq551s",
   <!-- contact section start -->
 
   <section class="contact" id="contact">
-    <h2 class="heading">Contact <span>Me!</span></h2>
+    <h2 class="heading">My <span>Contact</span></h2>
 
     <form action="#">
       <div class="input-box">
         <div class="input-field field">
-          <input type="text" placeholder="Your Name" id="name" class="item" autocomplete="off">
-          <div class="error-txt">Name can't be blank</div>
+          <input type="text" id="name" placeholder="Nama" class="item" autocomplete="off">
+          <div class="error-txt">Nama tidak boleh kosong ya,,</div>
         </div>
         <div class="input-field field">
-          <input type="email" placeholder="Email Address" id="email" class="item" autocomplete="off">
-          <div class="error-txt">Email Address can't be blank</div>
+          <input type="email" placeholder="Email" id="email" class="item" autocomplete="off">
+          <div class="error-txt">Email tidak boleh kosong ya,,</div>
         </div>
       </div>
       <div class="input-box">
         <div class="input-field field">
-          <input type="number" placeholder="Mobile Number" id="phone" class="item" autocomplete="off">
-          <div class="error-txt">Mobile Number can't be blank</div>
+          <input type="number" id="phone" class="item" placeholder="No. Hp/WA" autocomplete="off">
+          <div class="error-txt">Tuliskan nomor Hp ya,,,</div>
         </div>
         <div class="input-field field">
-          <input type="text" placeholder="Subject" id="Subject" class="item" autocomplete="off">
-          <div class="error-txt">Subject can't be blank</div>
+          <input type="text" id="Subject" placeholder="Subject" class="item" autocomplete="off">
+          <div class="error-txt">Subject tidak boleh kosong ya,,</div>
         </div>
       </div>
       <div class="textarea-field field">
-        <textarea name="" id="message" class="item" autocomplete="off" cols="30" rows="10" placeholder="Your Message"></textarea>
-        <div class="error-txt">Message can't be blank</div>
+        <textarea name="" id="message" placeholder="Tuliskan pesan Anda" class="item" autocomplete="off" cols="15" rows="5"></textarea>
+        <div class="error-txt">Mohon tuliskan Pesan kepada Ricky!</div>
       </div>
-      <button type="submit">Send Message</button>
+      <button type="submit">Kirim Pesan</button>
     </form>
   </section>
 
